<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id= "@+id/goToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/baseline_arrow_back_24">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="注册，开启精彩的新旅程！"
                    android:gravity="center"
                    android:textColor="#090909"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    />
            </androidx.appcompat.widget.Toolbar>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:src="@drawable/book"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/addImage"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/round_edit_24"
                    android:backgroundTint="@color/white"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:hint="@string/userName"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/userCode"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:hint="@string/code"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_getCode"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/clr_pressed"
                    android:text="@string/getCode"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="0dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/clr_pressed"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="0dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>