<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingTop="2dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="99dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="8dp"
                android:paddingLeft="8dp"
                android:padding="5dp"
                android:src="@drawable/_20" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:orientation="horizontal">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout_"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@drawable/shape_tab_bg"
                    app:tabIndicator="@drawable/shape_full_tab_indicator"
                    app:tabIndicatorColor="@color/red"
                    app:tabIndicatorFullWidth="true"
                    app:tabIndicatorHeight="35dp"
                    app:tabMinWidth="62dp"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/white"
                    app:tabTextColor="@color/black">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/recommend_tab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recommend" />
                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/follow_tab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follow" />
                </com.google.android.material.tabs.TabLayout>

            </LinearLayout>



            <LinearLayout
                android:id="@+id/search_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:paddingEnd="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/round_search_24"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/search_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/search" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_home_child"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


