<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingTop="2dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".fragment.EditFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical">

            <!-- 关闭按钮 -->
            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_marginLeft="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="关闭" />

            <!-- 间隔或占位视图，确保按钮位于 AppBar 的右侧 -->
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00008EFF"
                android:text="@string/save_to_local"
                android:textColor="#000000"
                app:cornerRadius="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:icon="@drawable/round_save_24"
                app:iconTint="#000000" />

            <Button
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#002196F3"
                android:text="@string/upload"
                android:textColor="#000000"
                app:cornerRadius="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:icon="@drawable/ic_common_settings"
                app:iconTint="#000000" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="2dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="120dp"
                    android:layout_marginStart="5dp"
                    android:layout_height="120dp">

                    <ImageView
                        android:id="@+id/newsImageHead"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/book"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/addNewsImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="选择图片"
                        android:src="@drawable/round_edit_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:tint="#000000" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <EditText
                    android:id="@+id/title_text_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/add_title"
                    android:inputType="textMultiLine"
                    android:text=""
                    android:textColorHint="#808080"
                    android:maxLines="3"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:autofillHints="" />
            </LinearLayout>

            <EditText
                android:id="@+id/title_text_des"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:drawablePadding="8dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="10"
                android:ems="10"
                android:hint="@string/add_des"
                android:inputType="textMultiLine"
                android:text=""
                android:textColorHint="#808080"
                android:maxLines="3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:autofillHints="" />

            <jp.wasabeef.richeditor.RichEditor
                android:id="@+id/editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="2dp"
        android:scrollbars="none">
        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_undo_24"
                android:id="@+id/undo" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_redo_24"
                android:id="@+id/redo" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_bold_24"
                android:id="@+id/bold" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_italic_24"
                android:id="@+id/italic" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_underlined_24"
                android:id="@+id/underline" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_strikethrough_s_24"
                android:id="@+id/strikethrough" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_color_text_24"
                android:id="@+id/color"
                app:tint="@color/black" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_size_24"
                android:id="@+id/size" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heading1"
                android:id="@+id/heading1" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heading2"
                android:id="@+id/heading2" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heading3"
                android:id="@+id/heading3" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_list_numbered_24"
                android:id="@+id/number" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_list_bulleted_24"
                android:id="@+id/bullet" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_indent_increase_24"
                android:id="@+id/indent" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_indent_decrease_24"
                android:id="@+id/outdent" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_align_left_24"
                android:id="@+id/left" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_align_center_24"
                android:id="@+id/center" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_format_align_right_24"
                android:id="@+id/right" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_insert_photo_24"
                android:id="@+id/pic" />
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
